--- a/css/style.css
+++ b/css/style.css
@@ -68,6 +68,17 @@ a {
 	font-size: 24px;
 }
 
+#citations ul {
+	margin-left: 25px;
+	padding: 15px;
+	background-color: rgba(182, 153, 209, 0.25);
+	list-style-type: none;
+}
+
+#citations ul li {
+	margin-bottom: 5px;
+}
+
 svg {
 	font-family: 'Lato', Arial, serif;
 	font-size: 10px;
