--- a/css/style.css
+++ b/css/style.css
@@ -8,6 +8,20 @@ body{
 	color: #000;
 	-webkit-font-smoothing: antialiased;
 }
+svg {
+	padding: 50px 50px;
+	padding-top: 15px;
+	margin-bottom: 50px;
+}
+.axis--x path {
+	display: none;
+}
+
+.line {
+	fill: none;
+	stroke: steelblue;
+	stroke-width: 2.5px;
+}
 a {
 	color: #555;
 	text-decoration: underline;
@@ -55,7 +69,7 @@ a:hover {
 }
 
 #chart-container {
-	width: 1200px; 
+	width: 1200px;
 	margin: 0 auto 50px auto;
 	background: rgba(255,255,255,0.5);
 	box-shadow: 1px 1px 4px rgba(0,0,0,0.2);
@@ -122,7 +136,7 @@ g.context rect.background{
 /* -----------------------------------------------------------------------------
 
   TABLE
-  
+
 ----------------------------------------------------------------------------- */
 table {
   background: #FFF;
