--- a/css/style.css
+++ b/css/style.css
@@ -163,3 +163,13 @@ table td[class*="span"],table th[class*="span"],.row-fluid table td[class*="span
 .striped tbody tr:nth-child(odd) td,.striped tbody tr:nth-child(odd) th{background-color:rgba(148,103,189,0.64);}
 ul.tables{margin-left: 3px;list-style-type: none;}
 ul.tables > li {margin-bottom: 20px;}
+
+
+footer {
+	background-color: rgba(182, 153, 209, 0.25);
+	margin-top: 50px;
+	padding: 50px 0px;
+}
+footer h2 {
+	font-weight: bolder;
+}
