Fix y-axis default: change start from 20 to 0

--- a/css/style.css
+++ b/css/style.css
@@ -138,6 +138,9 @@ g.context rect.background{
 div#bar-chart {
 	margin-bottom: 50px;
 }
+div#chart-container div p {
+	margin: 10px;
+}
 
 text.title{
   font-size: 24px;
