--- a/css/style.css
+++ b/css/style.css
@@ -28,30 +28,27 @@ a {
 a:hover {
 	text-decoration: none;
 }
-.container{
+.container {
 	width: 100%;
 	position: relative;
 }
-.clr{
+.clr {
 	clear: both;
 	padding: 0;
 	height: 0;
 	margin: 0;
 }
-.main{
+.main {
 	width: 100%;
 	margin: 0 auto;
 	position: relative;
 }
-.container > header{
+.container > header {
 	margin: 10px;
 	padding: 20px 10px 10px 10px;
-	position: relative;
-	display: block;
-	text-shadow: 1px 1px 1px rgba(0,0,0,0.2);
-    text-align: center;
 }
 .container > header h1{
+	text-align: center;
 	font-size: 30px;
 	line-height: 32px;
 	margin: 0;
@@ -60,11 +57,13 @@ a:hover {
 	color: #666;
 	text-shadow: 1px 1px 1px rgba(255,255,255,0.7);
 }
-.container > header p{
-	margin: 0;
+
+.container > header div {
+	max-width: 800px;
+	text-align: left;
+	margin: 0 auto;
 	padding: 15px 0 5px 0;
-	color: #000;
-	text-shadow: 1px 1px 1px rgba(255,255,255,0.7);
+	/* color: #000; */
 }
 
 #chart-container {
