--- a/css/style.css
+++ b/css/style.css
@@ -190,6 +190,67 @@ path.domain{
 	display: none;
 }
 
+/* average posts per week line */
+#avg-posts-per-week {
+	position: relative;
+}
+
+#avg-posts-per-week .line {
+    fill: none;
+    stroke: #af9358;
+    stroke-width: 2;
+}
+
+#avg-posts-per-week .y-axis-label {
+    fill: black;
+    font-size: 1.4em;
+    text-anchor: middle;
+    transform: rotate(-90deg);
+}
+
+#avg-posts-per-week .listening-rect {
+    fill: transparent;
+}
+
+#avg-posts-per-week .tooltip {
+    opacity: 0;
+    position: absolute;
+    top: -14px;
+    left: 0;
+    padding: 0.6em 1em;
+    background: #fff;
+    text-align: left;
+    line-height: 1.4em;
+    font-size: 0.9em;
+    border: 1px solid #ddd;
+    z-index: 10;
+    transition: all 0.1s ease-out;
+    pointer-events: none;
+}
+
+#avg-posts-per-week .tooltip:before {
+    content: '';
+    position: absolute;
+    bottom: 0;
+    left: 50%;
+    width: 12px;
+    height: 12px;
+    background: white;
+    border: 1px solid #ddd;
+    border-top-color: transparent;
+    border-left-color: transparent;
+    transform: translate(-50%, 50%) rotate(45deg);
+    transform-origin: center center;
+    z-index: 10;
+}
+
+#avg-posts-per-week .tooltip-week {
+    margin-bottom: 0.2em;
+    font-weight: 600;
+    font-size: 1.1em;
+    line-height: 1.4em;
+}
+
 /* -----------------------------------------------------------------------------
 
   TABLE
